--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
           "url": "https://diucoverpage.com"
         }
     </script>
+    <link rel="canonical" href="https://diucoverpage.com/">
+
     <meta name="google-adsense-account" content="ca-pub-9557711562563778">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -33,8 +35,7 @@
     <div class="header-mid" id="header-mid">
         <div>      <nav class="nav-bar">
             <div class="nav-logo">
-                <img class="nav-icon" src="images/logo1.png" alt="">
-                <a>Cover Page</a>
+                <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
             </div>
             <div class="nav-button">
                 <div class="dropdown">
@@ -161,28 +162,29 @@
                 </div>
                 <button  type="submit" class="submit" >Submit</button>
             </form>
-<!-- ------------------------------------------------------------------------------------------------------------- -->
-                <a target="_parent"><div class="document-holder">
-                    <div id="document" class="document" style="display:none;">
-                        <div id="document-content" class="document-content">
-                            <div class="document-logo">
-                                <img src="images/logo.png" alt="">
-                            </div>
-                            <div class="document-watermark">
-                                <img src="images/logo-tr.png" alt="">
-                            </div>
-                            <div id="documentContent"></div>
-                        </div>
-                        <div class="page-reference-text"><p>www.diucoverpage.com</p></div>
-                        <div class="document-buttons">
-                            <button id="downloadPdf" class="download">Download as PDF</button>
-                            <button id="downloadImage" class="image">Download as Image</button>
-                            <!-- <button id="downloadDocx" class="docx">Download as Docx</button> -->
-                        </div>
-                    </div>
-                </div>
-            </a>
         </section>
+<!-- ------------------------------------------------------------------------------------------------------------- -->
+    <div class="document-holder">
+        <div id="document" class="document" style="display:none;">
+            <div id="document-content" class="document-content">
+                <div class="document-logo">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <div class="document-watermark">
+                    <img src="images/logo-tr.png" alt="">
+                </div>
+                <div id="documentContent"></div>
+            </div>
+            <div class="page-reference-text"><p>www.diucoverpage.com</p></div>
+            <div class="document-buttons">
+                <button id="downloadPdf" class="download">Download as PDF</button>
+                <button id="downloadImage" class="image">Download as Image</button>
+                <!-- <button type="edit" id="edit" class="edit">Edit Cover Page</button> -->
+
+                <!-- <button id="downloadDocx" class="docx">Download as Docx</button> -->
+            </div>
+        </div>
+    </div>
 <!-- ---------------------------------------------------- -->
     </div>
     <div class="main-right" id="main-right">
@@ -231,6 +233,12 @@
             <p> </p>     
             <p>All rights reserved &copy<a href="https://github.com/tasnim-farhan-fahim" target="_blank">Tasnim Farhan Fahim <i class="fab fa-github"></i></a></p>
             <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
+            <div>
+                <br><br>
+                <a href="termsandcondition.html">Terms and Conditions  | </a>
+                <a href="privacyandpolicy.html"> Privacy and Policy</a>
+                <br>
+            </div>
     </div>
 <!-- ------------------------------------------------------------------------------------------------------------- -->
     <div class="footer-right" id="footer-right">
