--- a/labIndex.html
+++ b/labIndex.html
@@ -15,6 +15,8 @@
           "url": "https://diucoverpage.com"
         }
     </script>
+    <link rel="canonical" href="https://diucoverpage.com/labIndex.html">
+
     <meta name="google-adsense-account" content="ca-pub-9557711562563778">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -34,8 +36,7 @@
         <!-- Middle Header Content -->
         <nav class="nav-bar">
             <div class="nav-logo">
-                <img class="nav-icon" src="images/logo1.png" alt="">
-                <a>Cover Page</a>
+                <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
             </div>
             <div class="nav-button">
                 <div class="dropdown">
@@ -268,6 +269,12 @@
                 <p> </p>     
                 <p>All rights reserved &copy<a href="https://github.com/tasnim-farhan-fahim" target="_blank">Tasnim Farhan Fahim <i class="fab fa-github"></i></a></p>
                 <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
+                <div>
+                    <br><br>
+                    <a href="termsandcondition.html">Terms and Conditions  | </a>
+                    <a href="privacyandpolicy.html"> Privacy and Policy</a>
+                    <br>
+                </div>
         </div>
     <!-- ------------------------------------------------------------------------------------------------------------- -->
         <div class="footer-right" id="footer-right">
